--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
         <title>Boolando</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
+
     <body>
-        
+
+        <!-- CONTENITORE PRINCIPALE -->
+        <div class="main-container">
+            <!-- PRIMA LINEA DI ELEMENTI -->
+            <div class="product-row">
+                <div class="product">
+                    <img class="product-img" src="img/1.webp" alt="t-shirt">
+                </div>
+
+                <div class="product">
+                    <img class="product-img" src="img/2.webp" alt="t-shirt">
+                </div>
+
+                <div class="product">
+                    <img class="product-img" src="img/3 1.webp" alt="t-shirt">
+                </div>
+            </div>
+        </div>
     </body>
 </html>
