--- a/index.html
+++ b/index.html
@@ -15,17 +15,31 @@
             <!-- PRIMA LINEA DI ELEMENTI -->
             <div class="product-row">
                 <div class="product">
-                    <img class="product-img" src="img/1.webp" alt="t-shirt">
+                    <div>
+                        <img class="product-img-A" src="img/1.webp" alt="">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-discount">-50%</span>
+                        <span class="sustainability">Sostenibilità</span>
+                    </div>
+                    <div>
+                        <div>Levi's</div>
+                        <div>RELAXED FIT TEE UNISEX</div>
+                        <div>14,99 &euro; 29,99 &euro;</div>
+                    </div>
+                </div>
+
+
+                <div class="product">
+                    <img class="product-img-A" src="img/2.webp" alt="">
+                    <span class="heart">&hearts;</span>
                 </div>
 
                 <div class="product">
-                    <img class="product-img" src="img/2.webp" alt="t-shirt">
-                </div>
-
-                <div class="product">
-                    <img class="product-img" src="img/3 1.webp" alt="t-shirt">
+                    <img class="product-img-A" src="img/3.webp" alt="">
+                    <span class="heart">&hearts;</span>
                 </div>
             </div>
+
         </div>
     </body>
 </html>
