--- a/index.html
+++ b/index.html
@@ -12,33 +12,108 @@
 
         <!-- CONTENITORE PRINCIPALE -->
         <div class="main-container">
-            <!-- PRIMA LINEA DI ELEMENTI -->
+            <!-- PRIMA LINEA DI PRODOTTI -->
             <div class="product-row">
-                <div class="product">
+                <div class="product-card">
                     <div>
-                        <img class="product-img-A" src="img/1.webp" alt="">
+                        <img class="product-img-a" src="img/1.webp" alt="">
                         <span class="heart">&hearts;</span>
                         <span class="product-discount">-50%</span>
                         <span class="sustainability">Sostenibilità</span>
                     </div>
                     <div>
                         <div>Levi's</div>
-                        <div>RELAXED FIT TEE UNISEX</div>
-                        <div>14,99 &euro; 29,99 &euro;</div>
+                        <div class="product-description">RELAXED FIT TEE UNISEX</div>
+                        <div>
+                            <span class="price discounted-price">14,99 &euro;</span>
+                            <span class="price original-price">29,99 &euro;</span>
+                        </div>
                     </div>
                 </div>
 
-
-                <div class="product">
-                    <img class="product-img-A" src="img/2.webp" alt="">
-                    <span class="heart">&hearts;</span>
+                <div class="product-card">
+                    <div>
+                        <img class="product-img-a" src="img/2.webp" alt="">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-discount">-30%</span>
+                    </div>
+                    <div>
+                        <div>Guess</div>
+                        <div class="product-description">ROSES TEE</div>
+                        <div>
+                            <span class="price discounted-price">20,99 &euro;</span>
+                            <span class="price original-price">29,99 &euro;</span>
+                        </div>
+                    </div>
                 </div>
+                
 
-                <div class="product">
-                    <img class="product-img-A" src="img/3.webp" alt="">
-                    <span class="heart">&hearts;</span>
+                <div class="product-card">
+                    <div>
+                        <img class="product-img-a" src="img/3.webp" alt="">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-discount">-30%</span>
+                    </div>
+                    <div>
+                        <div>Come zucchero filato</div>
+                        <div class="product-description">VOGLIA DI COLORI PASTELLO</div>
+                        <div>
+                            <span class="price discounted-price">129,99 &euro;</span>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <!-- SECONDAA LINEA DI PRODOTTI -->
+            <div class="product-row">
+                <div class="product-card">
+                    <div>
+                        <img class="product-img-a" src="img/4.webp" alt="">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-discount">-50%</span>
+                        <span class="sustainability">Sostenibilità</span>
+                    </div>
+                    <div>
+                        <div>Levi's</div>
+                        <div class="product-description">TEE UNISEX</div>
+                        <div>
+                            <span class="price discounted-price">14,99 &euro;</span>
+                            <span class="price original-price">29,99 &euro;</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div>
+                        <img class="product-img-a" src="img/5.webp" alt="">
+                        <span class="heart">&hearts;</span>
+                    </div>
+                    <div>
+                        <div>Maya Deluxe</div>
+                        <div class="product-description">STRIPE BODICE</div>
+                        <div>
+                            <span class="price discounted-price">99,99 &euro;</span>
+                        </div>
+                    </div>
+                </div>
+                
+
+                <div class="product-card">
+                    <div>
+                        <img class="product-img-a" src="img/6.webp" alt="">
+                        <span class="heart">&hearts;</span>
+                        <span class="sustainability">Sostenibilità</span>
+                    </div>
+                    <div>
+                        <div>Esprit</div>
+                        <div class="product-description">MAGLIONE - BLACK</div>
+                        <div>
+                            <span class="price discounted-price">29,99 &euro;</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </body>
