--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
                 <div class="product-card">
                     <div>
                         <img class="product-img-a" src="img/1.webp" alt="">
+                        <img class="product-img-b" src="img/1b.webp" alt="">
                         <span class="heart">&hearts;</span>
-                        <span class="product-discount">-50%</span>
-                        <span class="sustainability">Sostenibilità</span>
+                        <span class="banner product-discount">-50%</span>
+                        <span class="banner sustainability">Sostenibilità</span>
                     </div>
                     <div>
                         <div>Levi's</div>
@@ -34,8 +35,9 @@
                 <div class="product-card">
                     <div>
                         <img class="product-img-a" src="img/2.webp" alt="">
+                        <img class="product-img-b" src="img/2b.webp" alt="">
                         <span class="heart">&hearts;</span>
-                        <span class="product-discount">-30%</span>
+                        <span class="banner product-discount">-30%</span>
                     </div>
                     <div>
                         <div>Guess</div>
@@ -51,8 +53,9 @@
                 <div class="product-card">
                     <div>
                         <img class="product-img-a" src="img/3.webp" alt="">
+                        <img class="product-img-b" src="img/3b.webp" alt="">
                         <span class="heart">&hearts;</span>
-                        <span class="product-discount">-30%</span>
+                        <span class="banner product-discount">-30%</span>
                     </div>
                     <div>
                         <div>Come zucchero filato</div>
@@ -69,9 +72,10 @@
                 <div class="product-card">
                     <div>
                         <img class="product-img-a" src="img/4.webp" alt="">
+                        <img class="product-img-b" src="img/4b.webp" alt="">
                         <span class="heart">&hearts;</span>
-                        <span class="product-discount">-50%</span>
-                        <span class="sustainability">Sostenibilità</span>
+                        <span class="banner product-discount">-50%</span>
+                        <span class="banner sustainability">Sostenibilità</span>
                     </div>
                     <div>
                         <div>Levi's</div>
@@ -86,6 +90,7 @@
                 <div class="product-card">
                     <div>
                         <img class="product-img-a" src="img/5.webp" alt="">
+                        <img class="product-img-b" src="img/5b.webp" alt="">
                         <span class="heart">&hearts;</span>
                     </div>
                     <div>
@@ -101,8 +106,9 @@
                 <div class="product-card">
                     <div>
                         <img class="product-img-a" src="img/6.webp" alt="">
+                        <img class="product-img-b" src="img/6b.webp" alt="">
                         <span class="heart">&hearts;</span>
-                        <span class="sustainability">Sostenibilità</span>
+                        <span class="banner sustainability">Sostenibilità</span>
                     </div>
                     <div>
                         <div>Esprit</div>
@@ -113,8 +119,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </body>
 </html>
