--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             <div class="product-row">
                 <div class="product-card">
                     <div>
-                        <img class="product-img-a" src="img/1.webp" alt="">
-                        <img class="product-img-b" src="img/1b.webp" alt="">
+                        <img class="product-img-a" src="img/1.webp" alt="fit tee unisex">
+                        <img class="product-img-b" src="img/1b.webp" alt="fit tee unisex">
                         <span class="heart">&hearts;</span>
-                        <span class="banner product-discount">-50%</span>
-                        <span class="banner sustainability">Sostenibilità</span>
+                        <div class="banner">
+                            <span class="product-discount">-50%</span>
+                            <span class="sustainability">Sostenibilità</span>
+                        </div>
                     </div>
                     <div>
                         <div>Levi's</div>
@@ -34,10 +36,12 @@
 
                 <div class="product-card">
                     <div>
-                        <img class="product-img-a" src="img/2.webp" alt="">
-                        <img class="product-img-b" src="img/2b.webp" alt="">
+                        <img class="product-img-a" src="img/2.webp" alt="roses tee">
+                        <img class="product-img-b" src="img/2b.webp" alt="roses tee">
                         <span class="heart">&hearts;</span>
-                        <span class="banner product-discount">-30%</span>
+                        <div class="banner">
+                            <span class="product-discount">-30%</span>
+                        </div>
                     </div>
                     <div>
                         <div>Guess</div>
@@ -52,10 +56,12 @@
 
                 <div class="product-card">
                     <div>
-                        <img class="product-img-a" src="img/3.webp" alt="">
-                        <img class="product-img-b" src="img/3b.webp" alt="">
+                        <img class="product-img-a" src="img/3.webp" alt="voglia di colori pastello">
+                        <img class="product-img-b" src="img/3b.webp" alt="voglia di colori pastello">
                         <span class="heart">&hearts;</span>
-                        <span class="banner product-discount">-30%</span>
+                        <div class="banner">
+                            <span class="product-discount">-30%</span>
+                        </div>
                     </div>
                     <div>
                         <div>Come zucchero filato</div>
@@ -67,15 +73,17 @@
                 </div>
             </div>
 
-            <!-- SECONDAA LINEA DI PRODOTTI -->
+            <!-- SECONDA LINEA DI PRODOTTI -->
             <div class="product-row">
                 <div class="product-card">
                     <div>
-                        <img class="product-img-a" src="img/4.webp" alt="">
-                        <img class="product-img-b" src="img/4b.webp" alt="">
+                        <img class="product-img-a" src="img/4.webp" alt="tee unisex">
+                        <img class="product-img-b" src="img/4b.webp" alt="tee unisex">
                         <span class="heart">&hearts;</span>
-                        <span class="banner product-discount">-50%</span>
-                        <span class="banner sustainability">Sostenibilità</span>
+                        <div class="banner">
+                            <span class="product-discount">-50%</span>
+                            <span class="sustainability">Sostenibilità</span>
+                        </div>
                     </div>
                     <div>
                         <div>Levi's</div>
@@ -89,8 +97,8 @@
 
                 <div class="product-card">
                     <div>
-                        <img class="product-img-a" src="img/5.webp" alt="">
-                        <img class="product-img-b" src="img/5b.webp" alt="">
+                        <img class="product-img-a" src="img/5.webp" alt="stripe bodice">
+                        <img class="product-img-b" src="img/5b.webp" alt="stripe bodice">
                         <span class="heart">&hearts;</span>
                     </div>
                     <div>
@@ -105,10 +113,12 @@
 
                 <div class="product-card">
                     <div>
-                        <img class="product-img-a" src="img/6.webp" alt="">
-                        <img class="product-img-b" src="img/6b.webp" alt="">
+                        <img class="product-img-a" src="img/6.webp" alt="maglione-black">
+                        <img class="product-img-b" src="img/6b.webp" alt="maglione-black">
                         <span class="heart">&hearts;</span>
-                        <span class="banner sustainability">Sostenibilità</span>
+                        <div class="banner">
+                            <span class="sustainability">Sostenibilità</span>
+                        </div>
                     </div>
                     <div>
                         <div>Esprit</div>
