Correzione Esercizio Olga

--- a/Esercizio Prova 2/index.html
+++ b/Esercizio Prova 2/index.html
@@ -4,35 +4,48 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Boolando Corretto</title>
+        <title>Boolando Prova 2</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
+
+        <!-- CONTENITORE PRINCIPALE -->
         <div class="main-contenitor">
+            <!-- PRIMA LINEA DI PRODOTTI -->
             <div class="product-row">
+                <!-- CARTA DEL PRODOTTO -->
                 <div class="product-card">
+                    <!-- IMMAGINE DEL PRODOTTO -->
                     <div class="product-image">
-                        <img src="img/1.webp" alt="">                        
+                        <img class="image-default" src="img/1.webp" alt=""> 
+                        <img class="image-hover" src="img/1b.webp" alt="Levi's Relax Fit">                
                     </div>
+                    <!-- DESCRIZIONE DEL PRODOTTO -->
                     <div class="product-description">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas est vel reprehenderit quaerat soluta. Praesentium magni dolor, vero quasi maiores corrupti distinctio sed facilis fugiat? Aspernatur nemo eum non alias.
                     </div>
                 </div>
 
                 <div class="product-card">
+                    <!-- IMMAGINE DEL PRODOTTO -->
                     <div class="product-image">
-                        <img src="img/1.webp" alt="">                    
+                        <img class="image-default" src="img/2.webp" alt=""> 
+                        <img class="image-hover" src="img/2b.webp" alt="">                
                     </div>
+                    <!-- DESCRIZIONE DEL PRODOTTO -->
                     <div class="product-description">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas est vel reprehenderit quaerat soluta. Praesentium magni dolor, vero quasi maiores corrupti distinctio sed facilis fugiat? Aspernatur nemo eum non alias.
                     </div>
                 </div>
 
                 <div class="product-card">
+                    <!-- IMMAGINE DEL PRODOTTO -->
                     <div class="product-image">
-                        <img src="img/1.webp" alt="">                    
+                        <img class="image-default" src="img/3.webp" alt=""> 
+                        <img class="image-hover" src="img/3b.webp" alt="">                
                     </div>
+                    <!-- DESCRIZIONE DEL PRODOTTO -->
                     <div class="product-description">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas est vel reprehenderit quaerat soluta. Praesentium magni dolor, vero quasi maiores corrupti distinctio sed facilis fugiat? Aspernatur nemo eum non alias.
                     </div>
