--- a/Esercizio Prova 2/index.html
+++ b/Esercizio Prova 2/index.html
@@ -18,40 +18,151 @@
                 <div class="product-card">
                     <!-- IMMAGINE DEL PRODOTTO -->
                     <div class="product-image">
-                        <img class="image-default" src="img/1.webp" alt=""> 
-                        <img class="image-hover" src="img/1b.webp" alt="Levi's Relax Fit">                
+                        <img class="image-default" src="img/1.webp" alt="Levi's Relax Fit"> 
+                        <img class="image-hover" src="img/1b.webp" alt="Levi's Relax Fit">
+                        <div class="heart">&hearts;</div>
+                        <div class="labels-wrapper">
+                            <span class="label discount">-50%</span>
+                            <span class="label promo">Sostenibilità</span>
+                        </div>             
                     </div>
+                    <!-- /IMMAGINE DEL PRODOTTO -->
+
                     <!-- DESCRIZIONE DEL PRODOTTO -->
                     <div class="product-description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas est vel reprehenderit quaerat soluta. Praesentium magni dolor, vero quasi maiores corrupti distinctio sed facilis fugiat? Aspernatur nemo eum non alias.
+                        <span class="brand">Levi's</span>
+                        <h3 class="product-name">RELAXED FIT TEE UNISEX</h3>
+                        <span class="discount-price">14,99 &euro;</span>
+                        <del class="original-price">29,99 &euro;</del>
                     </div>
+                    <!-- /DESCRIZIONE DEL PRODOTTO -->
                 </div>
+                <!-- /CARTA DEL PRODOTTO -->
 
+                <!-- CARTA DEL PRODOTTO -->
                 <div class="product-card">
                     <!-- IMMAGINE DEL PRODOTTO -->
                     <div class="product-image">
-                        <img class="image-default" src="img/2.webp" alt=""> 
-                        <img class="image-hover" src="img/2b.webp" alt="">                
+                        <img class="image-default" src="img/2.webp" alt="Roses Tee"> 
+                        <img class="image-hover" src="img/2b.webp" alt="Roses Tee">
+                        <div class="heart">&hearts;</div>
+                        <div class="labels-wrapper">
+                            <span class="label discount">-30%</span>
+                        </div>             
                     </div>
+                    <!-- /IMMAGINE DEL PRODOTTO -->
+
                     <!-- DESCRIZIONE DEL PRODOTTO -->
                     <div class="product-description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas est vel reprehenderit quaerat soluta. Praesentium magni dolor, vero quasi maiores corrupti distinctio sed facilis fugiat? Aspernatur nemo eum non alias.
+                        <span class="brand">Guess</span>
+                        <h3 class="product-name">ROSES TEE</h3>
+                        <span class="discount-price">20,99 &euro;</span>
+                        <del class="original-price">29,99 &euro;</del>
                     </div>
+                    <!-- /DESCRIZIONE DEL PRODOTTO -->
                 </div>
+                <!-- /CARTA DEL PRODOTTO -->
 
+                <!-- CARTA DEL PRODOTTO -->
                 <div class="product-card">
                     <!-- IMMAGINE DEL PRODOTTO -->
                     <div class="product-image">
-                        <img class="image-default" src="img/3.webp" alt=""> 
-                        <img class="image-hover" src="img/3b.webp" alt="">                
+                        <img class="image-default" src="img/3.webp" alt="Voglia di colori pastello"> 
+                        <img class="image-hover" src="img/3b.webp" alt="Voglia di colori pastello">
+                        <div class="heart">&hearts;</div>
+                        <div class="labels-wrapper">
+                            <span class="label discount">-30%</span>
+                        </div>             
                     </div>
+                    <!-- /IMMAGINE DEL PRODOTTO -->
+
                     <!-- DESCRIZIONE DEL PRODOTTO -->
                     <div class="product-description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas est vel reprehenderit quaerat soluta. Praesentium magni dolor, vero quasi maiores corrupti distinctio sed facilis fugiat? Aspernatur nemo eum non alias.
+                        <span class="brand">Come Zucchero Filato</span>
+                        <h3 class="product-name">VOGLIA DI COLORI PASTELLO</h3>
+                        <span class="discount-price">129,99 &euro;</span>
                     </div>
+                    <!-- /DESCRIZIONE DEL PRODOTTO -->
                 </div>
+                <!-- /CARTA DEL PRODOTTO -->
             </div>
+            <!-- /PRIMA LINEA DI PRODOTTI -->
+
+            <!-- SECONDA LINEA DI PRODOTTI -->
+            <div class="product-row">
+                <!-- CARTA DEL PRODOTTO -->
+                <div class="product-card">
+                    <!-- IMMAGINE DEL PRODOTTO -->
+                    <div class="product-image">
+                        <img class="image-default" src="img/4.webp" alt="Tee Unisex"> 
+                        <img class="image-hover" src="img/4b.webp" alt="Tee Unisex">
+                        <div class="heart">&hearts;</div>
+                        <div class="labels-wrapper">
+                            <span class="label discount">-50%</span>
+                            <span class="label promo">Sostenibilità</span>
+                        </div>             
+                    </div>
+                    <!-- /IMMAGINE DEL PRODOTTO -->
+
+                    <!-- DESCRIZIONE DEL PRODOTTO -->
+                    <div class="product-description">
+                        <span class="brand">Levi's</span>
+                        <h3 class="product-name">TEE UNISEX</h3>
+                        <span class="discount-price">14,99 &euro;</span>
+                        <del class="original-price">29,99 &euro;</del>
+                    </div>
+                    <!-- /DESCRIZIONE DEL PRODOTTO -->
+                </div>
+                <!-- /CARTA DEL PRODOTTO -->
+
+                <!-- CARTA DEL PRODOTTO -->
+                <div class="product-card">
+                    <!-- IMMAGINE DEL PRODOTTO -->
+                    <div class="product-image">
+                        <img class="image-default" src="img/5.webp" alt="Stripe Bodice"> 
+                        <img class="image-hover" src="img/5b.webp" alt="Stripe Bodice">
+                        <div class="heart">&hearts;</div>
+                        <div class="labels-wrapper">
+                        </div>             
+                    </div>
+                    <!-- /IMMAGINE DEL PRODOTTO -->
+
+                    <!-- DESCRIZIONE DEL PRODOTTO -->
+                    <div class="product-description">
+                        <span class="brand">Maya Deluxe</span>
+                        <h3 class="product-name">STRIPE BODICE</h3>
+                        <span class="discount-price">99,99 &euro;</span>
+                    </div>
+                    <!-- /DESCRIZIONE DEL PRODOTTO -->
+                </div>
+                <!-- /CARTA DEL PRODOTTO -->
+
+                <!-- CARTA DEL PRODOTTO -->
+                <div class="product-card">
+                    <!-- IMMAGINE DEL PRODOTTO -->
+                    <div class="product-image">
+                        <img class="image-default" src="img/6.webp" alt="Maglione Black"> 
+                        <img class="image-hover" src="img/6b.webp" alt="Maglione Black">
+                        <div class="heart">&hearts;</div>
+                        <div class="labels-wrapper">
+                            <span class="label promo">Sostenibilità</span>
+                        </div>             
+                    </div>
+                    <!-- /IMMAGINE DEL PRODOTTO -->
+
+                    <!-- DESCRIZIONE DEL PRODOTTO -->
+                    <div class="product-description">
+                        <span class="brand">Esprit</span>
+                        <h3 class="product-name">MAGLIONE - BLACK</h3>
+                        <span class="discount-price">29,99 &euro;</span>
+                    </div>
+                    <!-- /DESCRIZIONE DEL PRODOTTO -->
+                </div>
+                <!-- /CARTA DEL PRODOTTO -->
+            </div>
+            <!-- /SECONDA LINEA DI PRODOTTI -->
         </div>
+        <!-- /CONTENITORE PRINCIPALE -->
     </body>
 
 </html>
